@@ -1,0 +1,131 @@
+
+/* Glom
+ *
+ * Copyright (C) 2001-2004 Murray Cumming
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License as
+ * published by the Free Software Foundation; either version 2 of the
+ * License, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful, but
+ * WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public
+ * License along with this program; if not, write to the
+ * Free Software Foundation, Inc., 59 Temple Place - Suite 330,
+ * Boston, MA 02111-1307, USA.
+ */
+
+#include "window_print_layout_edit.h"
+#include <glom/box_db_table.h>
+//#include <libgnome/gnome-i18n.h>
+#include <bakery/App/App_Gtk.h> //For util_bold_message().
+#include <glibmm/i18n.h>
+
+namespace Glom
+{
+
+Window_PrintLayout_Edit::Window_PrintLayout_Edit(BaseObjectType* cobject, const Glib::RefPtr<Gnome::Glade::Xml>& refGlade)
+: Dialog_Design(cobject, refGlade),
+  m_entry_title(0)
+  //m_box(0)
+{
+  //refGlade->get_widget_derived("vbox_placeholder", m_box);
+
+  //m_label_frame->set_markup( Bakery::App_Gtk::util_bold_message(_("TODO: Print Layout Editor")) );
+
+
+  //Fill composite view:
+  //add_view(m_box);
+
+  show_all_children();
+}
+
+Window_PrintLayout_Edit::~Window_PrintLayout_Edit()
+{
+  //remove_view(m_box);
+}
+
+bool Window_PrintLayout_Edit::init_db_details(const Glib::ustring& table_name)
+{
+/*
+  if(m_box)
+  {
+    m_box->load_from_document();
+
+    Dialog_Design::init_db_details(table_name);
+
+    m_box->init_db_details(table_name);
+  }
+*/
+  return true;
+}
+
+
+Glib::ustring Window_PrintLayout_Edit::get_original_name() const
+{
+  return m_name_original;
+}
+
+void Window_PrintLayout_Edit::set_print_layout(const Glib::ustring& table_name, const sharedptr<const PrintLayout>& print_layout)
+{
+  m_modified = false;
+
+  m_name_original = print_layout->get_name();
+  m_print_layout = sharedptr<PrintLayout>(new PrintLayout(*print_layout)); //Copy it, so we only use the changes when we want to.
+  m_table_name = table_name;
+
+  //Dialog_Layout::set_document(layout, document, table_name, table_fields);
+
+  //Set the table name and title:
+  //m_label_table_name->set_text(table_name);
+
+  //m_entry_name->set_text(print_layout->get_name()); 
+  //m_entry_title->set_text(print_layout->get_title());
+
+  m_modified = false;
+}
+
+
+
+void Window_PrintLayout_Edit::enable_buttons()
+{
+
+}
+
+sharedptr<PrintLayout> Window_PrintLayout_Edit::get_print_layout()
+{
+/*
+  m_print_layout->set_name( m_entry_name->get_text() );
+  m_print_layout->set_title( m_entry_title->get_text() );
+
+  m_print_layout->m_layout_group->remove_all_items();
+
+  m_print_layout->m_layout_group->remove_all_items();
+
+  //The Header and Footer parts are implicit (they are the whole header or footer treeview)
+  sharedptr<LayoutItem_Header> header = sharedptr<LayoutItem_Header>::create();
+  sharedptr<LayoutGroup> group_temp = header;
+  fill_print_layout_parts(group_temp, m_model_parts_header);
+  if(header->get_items_count())
+    m_print_layout->m_layout_group->add_item(header);
+
+  fill_print_layout_parts(m_print_layout->m_layout_group, m_model_parts_main);
+
+  sharedptr<LayoutItem_Footer> footer = sharedptr<LayoutItem_Footer>::create();
+  group_temp = footer;
+  fill_print_layout_parts(group_temp, m_model_parts_footer);
+  if(footer->get_items_count())
+    m_print_layout->m_layout_group->add_item(footer);
+
+*/
+  return m_print_layout;
+}
+
+
+} //namespace Glom
+
+
