@@ -1,0 +1,62 @@
+/* Glom
+ *
+ * Copyright (C) 2007 Murray Cumming
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License as
+ * published by the Free Software Foundation; either version 2 of the
+ * License, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful, but
+ * WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public
+ * License along with this program; if not, write to the
+ * Free Software Foundation, Inc., 59 Temple Place - Suite 330,
+ * Boston, MA 02111-1307, USA.
+ */
+
+#ifndef WINDOW_PRINT_LAYOUT_EDIT_H
+#define WINDOW_PRINT_LAYOUT_EDIT_H
+
+#include <glom/mode_design/dialog_design.h>
+#include <glom/libglom/data_structure/print_layout.h>
+
+namespace Glom
+{
+
+class Window_PrintLayout_Edit : public Dialog_Design
+{
+public:
+  Window_PrintLayout_Edit(BaseObjectType* cobject, const Glib::RefPtr<Gnome::Glade::Xml>& refGlade);
+  virtual ~Window_PrintLayout_Edit();
+
+  virtual bool init_db_details(const Glib::ustring& table_name);
+
+  void set_print_layout(const Glib::ustring& table_name, const sharedptr<const PrintLayout>& print_layout);
+  Glib::ustring get_original_name() const;
+  sharedptr<PrintLayout> get_print_layout();
+
+protected:
+
+  void enable_buttons();
+
+  //Box_DB_Table_Definition* m_box;
+  Glib::ustring m_name_original;
+  Glib::ustring m_table_name;
+  bool m_modified;
+
+  sharedptr<PrintLayout> m_print_layout;
+
+  Gtk::Entry* m_entry_name;
+  Gtk::Entry* m_entry_title;
+  Gtk::Label* m_label_table_name;
+  Gtk::Label* m_label_table_title;
+};
+
+} //namespace Glom
+
+#endif //WINDOW_PRINT_LAYOUT_EDIT_H
+
